<resources>
    <string name="app_name">SporTEC</string>
    <string name="credential_activity_tab_login">Iniciar Sesión</string>
    <string name="credential_activity_tab_signin">Registrarse</string>
    <string name="credential_activity_login_title">Iniciar Sesión</string>
    <string name="credential_activity_login_button">Iniciar Sesión</string>
    <string name="credential_activity_user_email">Correo Electrónico</string>
    <string name="credential_activity_user_name">Nombre</string>
    <string name="credential_activity_user_sports">Deportes preferidos</string>
    <string name="credential_activity_user_password">Contraseña</string>
    <string name="credential_activity_user_password_confirm">Confirmar contraseña</string>
    <string name="credential_activity_user_password_lost">¿Olvidó su contraseña?</string>
    <string name="credential_activity_successful_login_greeting">Bienvenido: %s</string>
    <string name="credential_activity_successful_login_warning">Error: completa todos los campos.</string>
    <string name="credential_activity_take_photo">Tomar foto</string>
    <string name="credential_activity_select_sports">Deportes</string>
    <string name="login_dialog"> Iniciando Sesión </string>
    <string name="logout_dialog"> Cerrando Sesión </string>
    <string name="login_error_credentials"> Credenciales incorrectas</string>
    <string name="login_error_querying"> Credenciales incorrectas</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <string name="message_phototaken">  La fotografía ha sido tomada</string>
    <string name="message_fetchsports">  Descargando deportes</string>
    <string name="message_sports">  Deportes disponibles</string>
    <string name="ok_label">Ok</string>
    <string name="dismiss_label">Cancelar</string>
    <string name="clear_all_label">Limpiar selección</string>

    <string-array name="sports_local_options">
        <item>Baloncesto</item>
        <item>Fútbol</item>
        <item>Natación</item>
        <item>Boxeo</item>
        <item>Atletismo</item>
        <item>Tenis</item>
        <item>Golf</item>
        <item>Baseball</item>
    </string-array>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


</resources>
