<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/credential_activity_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_trophy"
            android:layout_gravity="center">
        </ImageView>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="1dp"
                android:elevation="14dp"
                android:orientation="vertical"
                android:padding="1dp">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/signin_fragment_name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_person"
                            android:drawableTint="@android:color/white"
                            android:singleLine="true"
                            android:hint="@string/credential_activity_user_name"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/signin_fragment_email"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_email"
                            android:drawableTint="@android:color/white"
                            android:singleLine="true"
                            android:hint="@string/credential_activity_user_email"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/signin_fragment_password"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_key"
                            android:drawableTint="@android:color/white"
                            android:singleLine="true"
                            android:hint="@string/credential_activity_user_password"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/signin_fragment_password_confirm"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_key"
                            android:drawableTint="@android:color/white"
                            android:singleLine="true"
                            android:hint="@string/credential_activity_user_password_confirm"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/signin_fragment_take_photo"
                            android:text="@string/credential_activity_take_photo"
                            android:drawableLeft="@drawable/ic_photo"
                            android:drawableTint="@color/colorPrimaryText"
                            style="@style/SoaButton"
                            android:layout_margin="10dp"/>
                        <Button
                            android:id="@+id/signin_fragment_select_sports"
                            android:text="@string/credential_activity_select_sports"
                            android:drawableLeft="@drawable/ic_sports"
                            android:drawableTint="@color/colorPrimaryText"
                            style="@style/SoaButton"
                            android:layout_margin="10dp"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/signin_fragment_summit"
                            android:text="@string/credential_activity_tab_signin"
                            style="@style/SoaButton"
                            android:layout_margin="10dp"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>