<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/credential_activity_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="20dp">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_trophy"
            android:layout_gravity="center">
        </ImageView>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="40dp"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="70dp"
                android:elevation="14dp"
                android:orientation="vertical"
                android:padding="20dp"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/login_fragment_email"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_person"
                            android:drawableTint="@android:color/white"
                            android:singleLine="true"
                            android:text="jnavcamacho@gmail.com"
                            android:hint="@string/credential_activity_user_email"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/login_fragment_password"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:singleLine="true"
                            android:text="jnavcamacho"
                            android:drawableLeft="@drawable/ic_key"
                            android:drawableTint="@android:color/white"
                            android:hint="@string/credential_activity_user_password"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:paddingTop="5dp"
                        android:paddingRight="2dp"
                        android:text="@string/credential_activity_user_password_lost" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/login_fragment_summit"
                            android:text="@string/credential_activity_login_button"
                            style="@style/SoaButton"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>